<resources>
    <string name="app_name">ShoeStore</string>
    <string name="action_logout">Logout</string>
    <string name="base_fragment">Base Fragment</string>

    <!-- Login -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="error_email">Enter email</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="error_pwd">Minimum 8 characters</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="new_user">New user? <b>SIGN UP</b></string>
    <!-- /Login -->

    <!-- Walkthrough -->
    <string name="walkthrough_fragment_label">Walkthrough Fragment</string>
    <!-- /Walkthrough -->

    <!-- Welcome -->
    <string name="welcome_fragment_label">Welcome Fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="hello_user">Hello %1$s</string>
    <!-- /Welcome -->

    <!-- Instruction -->
    <string name="instruction_fragment_label">Instruction Fragment</string>
    <string name="instruction_title_1_label">Add shoes, sneakers and more.</string>
    <string name="instruction_title_2_label">Select photos and more&#8230;</string>
    <!-- /Instruction -->

    <!-- List -->
    <string name="list_fragment_label">List Fragment</string>
    <string name="list_size_label">Size: %1$s</string>
    <string name="list_company_label">Company: %1$s</string>
    <string name="list_description_label">Description: %1$s</string>
    <!-- /List -->

    <!-- Detail -->
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="detail_name">Name</string>
    <string name="detail_description">Description</string>
    <string name="detail_company">Company</string>
    <string name="detail_size">Size</string>
    <string name="detail_image">Images</string>
    <string name="error_name">Enter name</string>
    <string name="error_description">Enter description</string>
    <string name="error_company">Enter company</string>
    <string name="error_size">Select size</string>
    <string name="save">Save</string>
    <string name="image">Image</string>

    <string-array name="size">
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
        <item>7</item>
        <item>7.5</item>
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
    </string-array>

    <!-- /Detail -->

</resources>