<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.udacity.shoestore.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_walkthroughFragment"
            app:destination="@id/WalkthroughFragment"
            app:enterAnim="@anim/anim_right_in"
            app:exitAnim="@anim/anim_left_out"
            app:popEnterAnim="@anim/anim_left_in"
            app:popExitAnim="@anim/anim_right_out"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/WalkthroughFragment"
        android:name="com.udacity.shoestore.walkthrough.WalkthroughFragment"
        android:label="@string/walkthrough_fragment_label"
        tools:layout="@layout/fragment_walkthrough">
        <argument
            android:name="email"
            app:argType="string" />
        <action
            android:id="@+id/action_WalkthroughFragment_to_ListFragment"
            app:destination="@id/ListFragment"
            app:enterAnim="@anim/anim_right_in"
            app:exitAnim="@anim/anim_left_out"
            app:popEnterAnim="@anim/anim_left_in"
            app:popExitAnim="@anim/anim_right_out"
            app:popUpTo="@id/WalkthroughFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/ListFragment"
        android:name="com.udacity.shoestore.list.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_ListFragment_to_DetailFragment"
            app:destination="@id/DetailFragment"
            app:enterAnim="@anim/anim_right_in"
            app:exitAnim="@anim/anim_left_out"
            app:popEnterAnim="@anim/anim_left_in"
            app:popExitAnim="@anim/anim_right_out" />
        <action
            android:id="@+id/action_ListFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:enterAnim="@anim/anim_right_in"
            app:exitAnim="@anim/anim_left_out"
            app:popEnterAnim="@anim/anim_left_in"
            app:popExitAnim="@anim/anim_right_out"
            app:popUpTo="@id/ListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/DetailFragment"
        android:name="com.udacity.shoestore.detail.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail"/>

</navigation>